# pydis

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  opcode.rs  prelude.rs
src/opcode/: mod.rs  py27.rs
