[package]
name = "pydis"
description = "Python 2.7 bytecode disassembler"
version = "0.2.2"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/landaire/pydis"
documentation = "https://docs.rs/pydis"
readme = "README.md"
keywords = ["python", "disassembler", "disassembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
enum-primitive-derive = "0.2"
num-traits = "0.2"
